[metadata]
name = ias-fs22-u3-udp-chat-tobias-hafner-ruben-hutter
version = 0.0.1
author = Tobias Hafner
author_email = t.hafner@stud.unibas.ch
description = Implementation of the udp chat of exercise 3 of ias-fs22
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ruben-hutter/IaS-Exercises
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
