[metadata]
name = udp-chat-tobi-ruben
version = 0.0.1
author = Ruben Hutter, Tobi Hafner
author_email = ruben.hutter@stud.unibas.ch, t.hafner@stud.unibas.ch
description = A simple tcp-chat programm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ruben-hutter/IaS-Exercises/tree/master/ias-u3
project_urls =
    Bug Tracker = https://github.com/ruben-hutter/IaS-Exercises/tree/master/ias-u3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src